Make search form an input group (fixes styling in collapsed navbar)

--- a/resources/assets/styles/_basic.scss
+++ b/resources/assets/styles/_basic.scss
@@ -21,9 +21,3 @@ a.action {
 .nav-search-label {
     cursor: pointer;
 }
-
-.navbar-form button {
-    margin-left: -7px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-}
